services/linkwarden/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-db
  namespace: linkwarden
  labels:
    app: linkwarden-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: linkwarden-db
