services/linkwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarks
  namespace: linkwarden
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: bookmarks.completeautomate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linkwarden
            port:
              number: 3000
